# liv

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  imgprovider.cpp  imgprovider.h  main.cpp  main.qml
.github/workflows/: linux-build.yml  windows-build.yml
src/: .clang-tidy  CMakeLists.txt  main.cpp
src/backend/: BackendManager.cpp  BackendManager.h  CMakeLists.txt  DirWrapper.cpp  DirWrapper.h  FileSystemWalker-test.cpp  FileSystemWalker.cpp  FileSystemWalker.h  FileSystemWrapper.cpp  FileSystemWrapper.h  FileSystemWrapperFactory.cpp  FileSystemWrapperFactory.h  IDir.h  IFileSystem.h  IFileSystemClassesFactory.h  IFileSystemWalker.h  ImgProvider-test.cpp  ImgProvider.cpp  ImgProvider.h  imgprovider.cpp  unittests.cpp
src/frontend/: frontend.qrc  main.qml
src/frontend/js/: ImageDisplayUtils.js
src/frontend/tests/: CMakeLists.txt  tst_frontend.qml  unittests.cpp
